# OpenVic-Simulation

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  CMakePresets.json  COPYRIGHT  ECS_RGO_DAG.md  ECS_RGO_DATAFLOW.md  LICENSE.md  README.md  SConstruct  Types.hpp  astyle.sh  build_scons_and_execute_windows.bat  clang-format.sh  delete_obj_files_windows.bat  headless_main.cpp  out_0_0.txt  out_0_1.txt  out_0_2.txt  out_0_3.txt  out_0_4.txt  out_0_5.txt  out_0_6.txt  out_0_7.txt  out_1_0.txt  out_1_1.txt  out_1_2.txt  out_1_3.txt  out_1_4.txt  out_1_5.txt  out_1_6.txt  out_1_7.txt  out_2_0.txt  out_2_1.txt  out_2_2.txt  out_2_3.txt  out_2_4.txt  (+44 more)
.github/: changed-files.yml  dependabot.yml
.github/actions/openvic-sim-build/: action.yml
.github/actions/openvic-sim-release/: action.yml
.github/workflows/: build-matrix.yml  builds.yml  dependabot-labels.yml  dependabot.yml  nightly-releases.yml  releases.yml  reusable-build.yml  reusable-release.yml
docs/: Containers.md
docs/ecs/: command-buffer.md  components.md  determinism.md  entities.md  pitfalls.md  queries.md  scheduling.md  storage-model.md  systems.md  threading-and-reductions.md  world.md
map/: Map.cpp  Map.hpp  Province.cpp  Province.hpp
misc/scripts/: exp_lut_generator.py  sin_lut_generator.py
src/headless/: main.cpp
src/openvic/: Date.cpp  Date.hpp  GameAdvancementHook.cpp  GameAdvancementHook.hpp  GameManager.cpp  GameManager.hpp  Logger.cpp  Logger.hpp  Simulation.hpp  Types.cpp  Types.hpp  main.cpp
src/openvic-simulation/: Alias.hpp  DefinitionManager.cpp  DefinitionManager.hpp  GameAdvancementHook.cpp  GameAdvancementHook.hpp  GameManager.cpp  GameManager.hpp  InstanceManager.cpp  InstanceManager.hpp  Modifier.cpp  Modifier.hpp  ModifierCalculationTestToggle.hpp  main.cpp  pch.cpp  pch.hpp
src/openvic-simulation/console/: ConsoleInstance.cpp  ConsoleInstance.hpp
src/openvic-simulation/core/: Algorithm.hpp  Allocator.hpp  Assert.hpp  BulkInsertWrapper.hpp  Compare.hpp  FormatValidate.hpp  Hash.hpp  Math.hpp  MathSqrt.hpp  Property.hpp  Signal.hpp  Typedefs.hpp
src/openvic-simulation/country/: Country.cpp  Country.hpp  CountryDefinition.cpp  CountryDefinition.hpp  CountryDefinitionManager.cpp  CountryDefinitionManager.hpp  CountryEconomy.cpp  CountryEconomy.hpp  CountryInstance.cpp  CountryInstance.hpp  CountryInstanceDeps.hpp  CountryInstanceManager.cpp  CountryInstanceManager.hpp  CountryParty.cpp  CountryParty.hpp  SharedCountryValues.cpp  SharedCountryValues.hpp  SharedCountryValuesDeps.hpp
src/openvic-simulation/dataloader/: Dataloader.cpp  Dataloader.hpp  Dataloader_Windows.hpp  IdentifierPolicy.hpp  ModManager.cpp  ModManager.hpp  NodeCallbacks.hpp  NodeTools.cpp  NodeTools.hpp  Node_forwarded.hpp  Vic2PathSearch.cpp  Vic2PathSearch_Windows.hpp
src/openvic-simulation/defines/: AIDefines.cpp  AIDefines.hpp  CountryDefines.cpp  CountryDefines.hpp  Define.cpp  Define.hpp  DiplomacyDefines.cpp  DiplomacyDefines.hpp  EconomyDefines.cpp  EconomyDefines.hpp  GraphicsDefines.cpp  GraphicsDefines.hpp  MilitaryDefines.cpp  MilitaryDefines.hpp  PopsDefines.cpp  PopsDefines.hpp
src/openvic-simulation/diplomacy/: CountryRelation.cpp  (+6 more)
src/openvic2/: GameManager.cpp  GameManager.hpp  Types.cpp  Types.hpp
tests/: CMakeLists.txt  SCsub
tests/benchmarks/: CMakeLists.txt  SCsub
tests/benchmarks/src/: main.cpp
tests/benchmarks/src/dataloading/: Dataloading.cpp
tests/benchmarks/src/ecs/: AliasingHotLoop.cpp  BulkCreate.cpp  CommandBuffer.cpp  ComponentAccess.cpp  EntityLifecycle.cpp  ImmutableEntity.cpp  Iteration.cpp  Migration.cpp  Reductions.cpp  Scheduler.cpp  SystemShouldRun.cpp  SystemTick.cpp
tests/src/: Helper.hpp  SpyAllocator.hpp  main.cpp
tests/src/core/: BulkInsertWrapper.cpp  DualAdjacent.cpp  Signal.cpp
tests/src/core/container/: FixedVector.cpp  RingBuffer.cpp
tests/src/core/error/: ErrorSet.cpp
tests/src/core/object/: Approx.hpp  AtomicFixedPoint.cpp  Colour.cpp  Colour.hpp  Date.cpp  FixedPoint.cpp  Numeric.hpp  Timespan.cpp  Vector.hpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
tests/src/core/random/: ExtendedMath.hpp  WeightedSampling.cpp
tests/src/core/reactive/: DerivedState.cpp  MutableState.cpp
tests/src/core/stl/containers/: FixedVector.cpp  RingBuffer.cpp  TunableVector.cpp
tests/src/core/string/: StringLiteral.cpp
tests/src/dataloader/: NodeTools.cpp
tests/src/economy/trading/: GoodMarket.cpp
tests/src/ecs/: Archetype.cpp  BulkCreate.cpp  CachedRef.cpp  Checksum.cpp  Chunk.cpp  ChunkMigration.cpp  ChunkOverflow.cpp  ChunkPool.cpp  ChunkSystem.cpp  ChunkView.cpp  CommandBuffer.cpp  CommandBufferApplyOrder.cpp  Component.cpp  Coverage.cpp  DenseSlotAllocator.cpp  EcsThreadPool.cpp  EntityID.cpp  EntityLifecycle.cpp  FNVHash.cpp  IdentitySnapshot.cpp  IdentitySnapshotInvariance.cpp  ImmutableEntity.cpp  InTickMutationGuard.cpp  Integration.cpp  IntraSystemParallel.cpp  Iteration.cpp  KeyedReductions.cpp  MatcherHash.cpp  Migration.cpp  MultiSystemMixedStage.cpp  Query.cpp  Reductions.cpp  Singleton.cpp  System.cpp  SystemAccess.cpp  SystemFilters.cpp  SystemFiltersWorkerCountInvariance.cpp  SystemPhaseAnchors.cpp  SystemSchedulerDisjointWriters.cpp  SystemSchedulerSingletonWrites.cpp  (+7 more)
tests/src/ecs/rgo/: RgoFixture.hpp  RgoMath.cpp  RgoPipeline.cpp  RgoQuirks.cpp  RgoWorkerCountInvariance.cpp
tests/src/multiplayer/: ChatManager.cpp  IpAddress.cpp  PacketType.cpp
tests/src/multiplayer/lowlevel/: IpAddress.cpp  ReliableUdpServer.cpp  TcpServer.cpp  UdpServer.cpp
tests/src/pathfinding/: AStarPathing.cpp  FringePathing.cpp  Pathing.hpp  PointMap.cpp
tests/src/types/: Approx.hpp  AtomicFixedPoint.cpp  Colour.cpp  Colour.hpp  Date.cpp  FixedPoint.cpp  FixedVector.cpp  IdentifierRegistry.cpp  Numeric.hpp  Random.cpp  RingBuffer.cpp  Signal.cpp  Timespan.cpp  TypedIndices.cpp  Vector.hpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
tests/src/utility/: DualAdjacent.cpp  ErrorSet.cpp  Marshal.cpp  WeightedSampling.cpp
tests/src/utility/reactive/: DerivedState.cpp  MutableState.cpp
tools/: sim_build.py
(+768 files in other folders)
